<resources>
    <string name="app_name">Barber</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="erkek_kuaf_r">erkek kuaförü</string>
    <string name="e_g_5">e.g 5</string>
    <string name="e_g_6">e.g 5</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="re_password">re-password</string>
    <string name="register">Register</string>
    <string name="login">login\n</string>
    <string name="logina">login with google</string>
    <string name="register_text">if you new user click</string>
    <string name="map">Map</string>
    <string name="set">set</string>
    <string name="settings">settings</string>
    <string-array name="languages">
        <item>Türkçe</item>
        <item>English</item>
    </string-array>
</resources>