<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <activity
        android:id="@+id/navigation_home"
        android:name="com.example.kuafrapp.View.HomeActivity"
        android:label="@string/title_home"
        tools:layout="@layout/activity_home" />

    <activity
        android:id="@+id/navigation_maps"
        android:name="com.example.kuafrapp.View.MapsActivity"
        android:label="@string/title_dashboard"
        tools:layout="@layout/activity_dashboard" />

    <activity
        android:id="@+id/navigation_settings"
        android:name="com.example.kuafrapp.View.SettingsActivity"
        android:label="@string/title_notifications"
        tools:layout="@layout/activity_notifications" />
</navigation>