<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundGray"
    tools:context=".View.login.RegisterActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/registerCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardElevation="8dp"
        android:gravity="center"
        android:backgroundTint="@android:color/white"
        app:strokeColor="@color/black"
        app:strokeWidth="0.5dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bakim"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textAlignment="center">
            </TextView>

            <!-- Berber bilgileri - Başlangıçta görünmez, Switch açıldığında görünür olacak -->
            <LinearLayout
                android:id="@+id/barberInfoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:visibility="gone">

                <Button
                    android:id="@+id/selectPhotoButton"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:text="Fotoğraf Seç" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/businessNameTitle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/businessNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="İşletme Adı"
                        android:inputType="text"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/locationTitle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/locationEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Konum"
                        android:inputType="text"
                        android:maxLength="100"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/telephoneNumber"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/telephoneNumberEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Telefon Numarası"
                        android:inputType="phone"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </com.google.android.gms.maps.MapView>

                <LinearLayout
                    android:id="@+id/servicesLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/menHairCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Erkek Kuaför" />

                    <CheckBox
                        android:id="@+id/womenHairCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Kadın Kuaför" />

                    <CheckBox
                        android:id="@+id/petGroomingCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pet Kuaför" />

                    <CheckBox
                        android:id="@+id/carWashCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="Araba Yıkama" />

                    <CheckBox
                        android:id="@+id/kidHairCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Çocuk Kuaför" />

                    <CheckBox
                        android:id="@+id/spaMassageCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Spa ve Masaj" />

                    <CheckBox
                        android:id="@+id/nailCareCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tırnak Bakımı" />

                    <CheckBox
                        android:id="@+id/skinCareCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cilt Bakımı" />
                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullNameTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:inputType="text"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eMailTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eMailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rePasswordTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rePasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/re_password"
                    android:inputType="text"
                    android:maxLength="15"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp" />

                <Switch
                    android:id="@+id/barberSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="Bir işletme sahibiyim."
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/buttonBlue"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="16sp">

            </com.google.android.material.button.MaterialButton>

            <!-- Google Login Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginWithGoogleButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="12dp"
                android:text="Google ile Kayıt Ol  "
                android:textColor="@color/black"
                app:icon="@mipmap/google_icon"
                app:iconSize="24dp"
                app:iconTint="@null" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</ScrollView>